--- a/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
+++ b/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
@@ -858,7 +858,7 @@
                                             <Setter Property="Background" Value="LightGray" />
                                         </Trigger>
                                         <DataTrigger
-                                            Binding="{Binding Path=., Converter={StaticResource IsPlayertoWatchConverter}}"
+                                            Binding="{Binding Path=pr, Converter={StaticResource IsPlayertoWatchConverter}}"
                                             Value='True'>
                                             <Setter Property="Background" Value="Cyan" />
                                         </DataTrigger>
