--- a/SpectatorFootball/WindowsLeague/StatsUX.xaml
+++ b/SpectatorFootball/WindowsLeague/StatsUX.xaml
@@ -17,7 +17,7 @@
                 <Button Name="btnStandings" Height="25" Style="{StaticResource appSubmitStyle}" Margin="4" Click="btnStandings_Click">Standings</Button>
             </StackPanel>
             <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Label Name="lblTrainingCampHeader" Style="{StaticResource MedLabelstyle}"></Label>
+                <Label Name="lblStatsHeader" Style="{StaticResource MedLabelstyle}"></Label>
             </StackPanel>
             <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="right">
                 <Button Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button>
